--- a/css/12-bool.css
+++ b/css/12-bool.css
@@ -19,7 +19,7 @@
 .container {
   margin: 0 auto;
   max-width: 1170px;
-  background-color: #ffc0cb;
+  /* background-color: #ffc0cb; */
 }
 
 .container::after {
@@ -41,6 +41,9 @@
 }
 .col-3{
   width: calc((100% / 12 ) * 3);
+}
+.col-4{
+  width: calc((100% / 12 ) * 4);
 }
 .col-5{
   width: calc((100% / 12 ) * 5);
@@ -78,6 +81,9 @@
 .col-offset-3{
   margin-left: : calc((100% / 12 ) * 3);
 }
+.col-offset-4{
+  margin-left: : calc((100% / 12 ) * 4);
+}
 .col-offset-5{
   margin-left: : calc((100% / 12 ) * 5);
 }
@@ -113,6 +119,9 @@
   }
   .col-xs-3{
     width: calc((100% / 12 ) * 3);
+  }
+  .col-xs-4{
+    width: calc((100% / 12 ) * 4);
   }
   .col-xs-5{
     width: calc((100% / 12 ) * 5);
@@ -151,6 +160,9 @@
   .col-md-3{
     width: calc((100% / 12 ) * 3);
   }
+  .col-md-4{
+    width: calc((100% / 12 ) * 4);
+  }
   .col-md-5{
     width: calc((100% / 12 ) * 5);
   }
@@ -187,6 +199,9 @@
   }
   .col-lg-3{
     width: calc((100% / 12 ) * 3);
+  }
+  .col-lg-4{
+    width: calc((100% / 12 ) * 4);
   }
   .col-lg-5{
     width: calc((100% / 12 ) * 5);
