--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .row {
-  width: 992px;
+  width: 1170px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
@@ -8,7 +8,6 @@
 /* BLOCCO LEZIONI */
 #lezioni .row>.left,
 #lezioni .row>.right {
-  width: 50%;
   float: left;
 }
 
@@ -60,9 +59,9 @@
   clear: both;
 }
 
-.container.grey {
+/* .container.grey {
   background-color: #f9f9f9;
-}
+} */
 
 img {
   height: 200px;
@@ -70,4 +69,24 @@ img {
 
 .clear {
   clear: both;
+}
+
+
+/* responsive */
+
+/* < 767 mobile */
+@media screen and (max-width: 768px) {
+  .col-xs-12 {
+    font-size: 35px;
+    margin-bottom: 50px;
+  }
+  h1 {
+    font-size: 70px;
+  }
+  h3 {
+    font-size: 60px;
+  }
+  p {
+    font-size: 60px;
+  }
 }
