--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@
 #why .row>.second,
 #why .row>.third {
   width: 100%;
-  margin-top: 80px;
 }
 
 #why .row img {
@@ -80,13 +79,45 @@ img {
     font-size: 35px;
     margin-bottom: 50px;
   }
-  h1 {
-    font-size: 70px;
+
+  .left, .central, .right, .second, .first, .third {
+    padding: 50px;
   }
+
+  h1 {
+    font-size:60px;
+  }
+
   h3 {
-    font-size: 60px;
+    padding-bottom: 10px;
+    font-size: 40px;
   }
   p {
-    font-size: 60px;
+    font-size: 45px;
+  }
+  hr, img {
+    margin: 40px 0;
   }
 }
+
+/* 768px a 991px tablet */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .left, .central, .right, .second, .first, .third {
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+  h3 {
+    padding-bottom: 10px;
+    font-size: 30px;
+  }
+  p {
+    font-size: 25px;
+  }
+  hr, img {
+    margin: 40px 0;
+  }
+}
+/* /768px a 991px tablet */
