--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
+  background-color: #F8F8FF;
+  border-radius: 30px;
+  box-shadow: 0 0 11px #DCDCDC;
 }
 
 /* BLOCCO LEZIONI */
@@ -46,7 +49,7 @@
 }
 
 #why .row img {
-  background-color: #428bca;
+  background-color: #9475ca;
   border-radius: 50%;
   padding: 30px
 }
@@ -121,3 +124,35 @@ img {
   }
 }
 /* /768px a 991px tablet */
+
+/* > 992px Desktop*/
+@media screen and (min-width: 991px) {
+  hr {
+   display: none;
+  }
+  .left, .central, .right, .second, .first, .third {
+    padding: 10px 20px;
+    /* min-height: 350px; */
+  }
+
+  h1 {
+    padding-top: 30px;
+    font-size: 40px;
+  }
+  h3 {
+    padding-bottom: 10px;
+    font-size: 25px;
+  }
+  p {
+    font-size: 20px;
+  }
+  hr, img {
+    margin: 40px 0;
+  }
+}
+
+
+
+
+
+/* / > 992px Desktop*/
