--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,22 @@
+body {
+  font-family: 'Lato', sans-serif;
+}
+
 .row {
   width: 1170px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
-  background-color: #F8F8FF;
-  border-radius: 30px;
-  box-shadow: 0 0 11px #DCDCDC;
+  margin-top: 40px;
+  border-radius: 30px 30px 0 0 ;
+  box-shadow: 0 0 11px #696969;
 }
 
 /* BLOCCO LEZIONI */
+.card {
+  background-color: #48D1CC;
+  border-radius: 30px 30px 0 0;
+}
+
 #lezioni .row>.left,
 #lezioni .row>.right {
   float: left;
@@ -78,6 +86,11 @@ img {
 
 /* < 767 mobile */
 @media screen and (max-width: 768px) {
+  .row {
+    padding-top: 20px;
+    border-radius: 0;
+    box-shadow: none;
+  }
   .col-xs-12 {
     font-size: 35px;
     margin-bottom: 50px;
@@ -105,12 +118,18 @@ img {
 
 /* 768px a 991px tablet */
 @media screen and (min-width: 768px) and (max-width: 991px) {
+  .row {
+    background-color: none;
+    padding-top: 20px;
+    border-radius: 0;
+    box-shadow: none;
+  }
   .left, .central, .right, .second, .first, .third {
     padding: 20px;
   }
 
   h1 {
-    font-size: 40px;
+    font-size: 35px;
   }
   h3 {
     padding-bottom: 10px;
@@ -127,16 +146,19 @@ img {
 
 /* > 992px Desktop*/
 @media screen and (min-width: 991px) {
+  .row {
+    background-color: #F8F8FF;
+  }
+
   hr {
    display: none;
   }
   .left, .central, .right, .second, .first, .third {
-    padding: 10px 20px;
-    /* min-height: 350px; */
+  padding: 30px 35px 32px;
   }
 
   h1 {
-    padding-top: 30px;
+    line-height: 71px;
     font-size: 40px;
   }
   h3 {
